# face_demo

./: pyproject.toml
facebank/: facebank_embeddings.npy  facebank_names.npy
hls_streams/0e172164-6d97-4ce9-a689-3fc076d37513/: playlist.m3u8  playlist0.ts
hls_streams/1443335b-20e0-4331-a0c9-30f9ba310cba/: playlist4.ts  playlist6.ts  playlist7.ts
hls_streams/1a11adc0-f63f-4f58-8dad-85c7d83a3b52/: playlist.m3u8  playlist0.ts
hls_streams/1a70dae1-3753-4f5c-bd20-bc15d51dd2b1/: playlist.m3u8  playlist0.ts
hls_streams/1e455472-3c74-4891-a835-54bb85e32f13/: playlist.m3u8  playlist3.ts  playlist4.ts  playlist5.ts  playlist6.ts  playlist7.ts  playlist8.ts
hls_streams/20505ef4-a856-4c47-b51b-9a074113aadc/: playlist0.ts
hls_streams/2446cf29-8f55-4473-a124-c4f72fbc8ca8/: playlist.m3u8  playlist0.ts  playlist1.ts  playlist2.ts  playlist3.ts
hls_streams/2cbefcdd-703f-4ce8-9f1d-92a32c0ce1f8/: playlist.m3u8  playlist10.ts  playlist11.ts  playlist12.ts  playlist7.ts  playlist8.ts  playlist9.ts
hls_streams/4afd5b48-0536-4bbd-9c02-9ca7a28ec7ef/: playlist.m3u8  playlist0.ts  playlist2.ts  playlist3.ts
hls_streams/51736e5c-8328-4785-9f12-a3f29b59b56b/: playlist.m3u8  playlist2.ts  playlist4.ts  playlist5.ts  playlist6.ts
hls_streams/546378d5-0a8e-4ff0-8d66-0667af0866c7/: playlist.m3u8  playlist0.ts
hls_streams/56aee25f-0a48-4be9-8093-ab1f9d8028f1/: playlist.m3u8  playlist53.ts  playlist54.ts  playlist55.ts  playlist56.ts  playlist57.ts  playlist58.ts
hls_streams/6041b51c-8bc5-49f4-90a2-61bfac823545/: playlist.m3u8  playlist1.ts  playlist3.ts  playlist4.ts  playlist5.ts  playlist6.ts
hls_streams/622330c5-a89e-4b19-9cb8-270bf72f962c/: playlist.m3u8  (+1 more)
src/: __init__.py  api.py  main.py
(+121 files in other folders)
